fixed overflowng of nested form selects with large text

--- a/feature-libs/my-account/organization/styles/__ux/_form.scss
+++ b/feature-libs/my-account/organization/styles/__ux/_form.scss
@@ -4,6 +4,7 @@
   }
 
   label {
+    max-width: 100%;
     @include media-breakpoint-up(md) {
       flex: 50%;
     }
